# pythonmaude

./: .gitignore  README.md  ast.py  context.py  equationalmatching.py  exceptions.py  interpreter.py  loader.py  maude.py  maudeparser.py  maudeparsertests.py  parser.py  parsertests.py  termparser.py  termrewriting.py  termrewritingtests.py
lib/: CMakeLists.txt
lib/inc/: substituion.hpp  substitution.hpp  term.hpp  termrewriting.hpp  variablename.hpp
lib/pytermrewriting/: setup.py
lib/pytermrewriting/pytermrewriting/: PyVariableName.pyx  Substitution.pxd  TTerm.pxd  Term.pxd  TermRewriting.pxd  VTerm.pxd
lib/src/: substitution.cpp  term.cpp  termrewriting.cpp  variablename.cpp
lib/termrewriting/: CMakeLists.txt
lib/termrewriting/inc/: Substitution.hpp  Term.hpp  VariableName.hpp  substitution.hpp  term.hpp  tterm.hpp  vterm.hpp
lib/termrewriting/src/: Term.cpp  VariableName.cpp  substitution.cpp  term.cpp  termrewriting.cpp  tterm.cpp  variablename.cpp  vterm.cpp
lib/termrewriting/tests/: CMakeLists.txt  termtests.cpp
lib/tests/: CMakeLists.txt  termtests.cpp  variablenametests.cpp
testdata/: emptyfmodule.maude  emptymodule.maude  simplefmodule.maude  simplemodule.maude
